--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2021"
 [dependencies]
 # interact with the aur
 raur = "7.0.0"
-git2 = "0.18.1"
 base64 = "0.21.5"
 regex = "1.10.2"
 
@@ -24,3 +23,12 @@ bollard = "0.15.0"
 # web
 actix-web = "4.4.0"
 actix-files = "0.6.2"
+sha2 = "0.10.8"
+
+# storage
+serde = "1.0.193"
+serde_json = "1.0.108"
+
+# log
+log = "0.4.20"
+simplelog = "0.12.1"
