--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 # interact with the aur
 raur = "7.0.0"
+srcinfo = "1.1.0"
 base64 = "0.21.5"
 regex = "1.10.2"
 
@@ -32,3 +33,6 @@ serde_json = "1.0.108"
 # log
 log = "0.4.20"
 simplelog = "0.12.1"
+
+# async
+async-trait = "0.1.74"
