--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,22 +9,24 @@ edition = "2021"
 # interact with the aur
 raur = "7.0.0"
 srcinfo = "1.1.0"
-base64 = "0.21.5"
-regex = "1.10.2"
 
 # async
 tokio = { version = "1.35.0", features = ["full"]}
 futures = "0.3.29"
 futures-util = "0.3.29"
+tokio-util = { version = "0.7.10", features = ["compat"]}
 anyhow = "1.0.75"
 
 # docker
 bollard = "0.15.0"
+async-tar = "0.4.2"
+hyper = "0.14.27"
 
 # web
 actix-web = "4.4.0"
 actix-files = "0.6.2"
 sha2 = "0.10.8"
+base64 = "0.21.5"
 
 # storage
 serde = "1.0.193"
