--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,13 @@ srcinfo = "1.1.0"
 
 # async
 tokio = { version = "1.35.0", features = ["full"]}
+tokio-util = { version = "0.7.10", features = ["compat"]}
+
 futures = "0.3.29"
 futures-util = "0.3.29"
-tokio-util = { version = "0.7.10", features = ["compat"]}
-anyhow = "1.0.75"
+
+async-std = "1.12.0"
+async-trait = "0.1.74"
 
 # docker
 bollard = "0.15.0"
@@ -35,6 +38,4 @@ serde_json = "1.0.108"
 # log
 log = "0.4.20"
 simplelog = "0.12.1"
-
-# async
-async-trait = "0.1.74"
+anyhow = "1.0.75"
