--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ base64 = "0.21.5"
 # storage
 serde = "1.0.193"
 serde_json = "1.0.108"
+typetag = "0.2.14"
+dyn-clone = "1.0.16"
 
 # log
 log = "0.4.20"
