--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "serene"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 # interact with the aur
 raur = "7.0.0"
@@ -19,6 +17,10 @@ futures-util = "0.3.29"
 
 async-std = "1.12.0"
 async-trait = "0.1.74"
+
+# scheduling
+tokio-cron-scheduler = "0.9.4"
+uuid = "1.6.1"
 
 # docker
 bollard = "0.15.0"
@@ -41,4 +43,6 @@ dyn-clone = "1.0.16"
 log = "0.4.20"
 simplelog = "0.12.1"
 anyhow = "1.0.75"
+
+# config
 lazy_static = "1.4.0"
