--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./app:/app
+    environment:
+      RUST_LOG: info
