--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serene-data = { path = "../data" }
+
 # serialization
 serde = { version = "1.0.193", features = ["derive"]}
 serde_json = "1.0.108"
@@ -21,6 +23,7 @@ cron-descriptor = "0.1.1"
 # secret
 sha2 = "0.10.8"
 base64 = "0.21.5"
+base32 = "0.4.0"
 rand = "0.8.5"
 
 # web
