--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 serde = { version = "1.0.193", features = ["derive"]}
 chrono = { version = "0.4.31", features = ["serde"] }
 
+# secret
+sha2 = "0.10.8"
+base64 = "0.21.7"
