chore: moved server to subdirectory

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serene-data = { path = "../data" }
+serene-data = { path = "../server/data" }
 
 # serialization
 serde = { version = "1.0.193", features = ["derive"]}
