--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,7 @@ name: Build and Publish Server Image
 on:
   push:
     branches: ['main']
+    paths: ["server/**", ".github/workflows/publish.yml"]
   workflow_dispatch:
   release:
     types: ['published']
@@ -40,6 +41,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: server/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
