--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -40,6 +40,9 @@ serde_json = "1.0.108"
 typetag = "0.2.14"
 dyn-clone = "1.0.16"
 
+# database
+sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", ]}
+
 # log
 log = "0.4.20"
 env_logger = "0.10.1"
