--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,7 +23,7 @@ cron-descriptor = "0.1.1"
 # secret
 rand = "0.8.5"
 
-# web
-reqwest = { version = "0.11.23", features = ["blocking", "json"] }
+# web, TODO: for some reason, when this builds with openssl (i.e. not rustls), the server does too, which causes problems with the container. WHYYY?
+reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "blocking", "json"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 
