feat: reference itself for aur dependencies

--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -12,14 +12,18 @@ ADD makepkg.conf /etc/serene/makepkg.conf
 RUN cat /etc/serene/pacman.conf >> /etc/pacman.conf
 RUN cat /etc/serene/makepkg.conf >> /etc/makepkg.conf
 
+RUN mkdir -p /app/build
+RUN mkdir -p /app/target
+
+# create custom repo file so it can be included
+RUN touch /app/build/custom-repo
+
 # update pacman and install packages
 RUN pacman -Suy --noconfirm
 RUN pacman -Sy --noconfirm git
 
 # create build folder and script
 ADD run.sh /app/run.sh
-RUN mkdir /app/build
-RUN mkdir /app/target
 
 # switch to builder user
 USER build
