--- a/runner/pacman.conf
+++ b/runner/pacman.conf
@@ -4,3 +4,6 @@
 # enable multilib
 [multilib]
 Include = /etc/pacman.d/mirrorlist
+
+# include custom repo if desired
+Include = /app/build/custom-repo
