--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,6 +13,7 @@ srcinfo = "1.1.0"
 # async
 tokio = { version = "1.35.0", features = ["full"]}
 tokio-util = { version = "0.7.10", features = ["compat"]}
+tokio-stream = "0.1.15"
 
 futures = "0.3.29"
 futures-util = "0.3.29"
@@ -33,6 +34,7 @@ hyper = "0.14.27"
 # web
 actix-web = "4.4.0"
 actix-files = "0.6.2"
+actix-web-lab = "0.20.2"
 
 # storage
 serde = "1.0.193"
