--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -32,7 +32,7 @@ async-tar = "0.4.2"
 hyper = "0.14.27"
 
 # web
-actix-web = "4.4.0"
+actix-web = "4.8.0"
 actix-files = "0.6.2"
 actix-web-lab = "0.20.2"
 
@@ -52,3 +52,6 @@ anyhow = "1.0.75"
 
 # config
 lazy_static = "1.4.0"
+
+# crypto
+sequoia-openpgp = { version = "1.21.1" }
