--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,8 +2,9 @@ FROM rust:alpine3.18 as builder
 
 WORKDIR /app
 
-# install openssl
 RUN apk add --no-cache musl-dev
+# install nettle for signing
+RUN apk add --no-cache nettle-dev clang pkgconfig
 
 # install sqlx cli
 RUN cargo install sqlx-cli --no-default-features --features rustls,sqlite
@@ -11,6 +12,9 @@ RUN cargo install sqlx-cli --no-default-features --features rustls,sqlite
 # run build
 COPY . .
 ENV DATABASE_URL=sqlite:///app/database.db
+
+# we have to disable static linking, otherwise sequoia won't build under alpine with nettle backend
+ENV RUSTFLAGS -Ctarget-feature=-crt-static
 
 RUN cargo sqlx database setup --source server/migrations
 RUN cargo build --release --bin serene
@@ -22,8 +26,8 @@ WORKDIR /app
 # copy files over
 COPY --from=builder /app/target/release/serene /usr/bin/serene
 
-# install required utilities
-RUN apk add git pacman binutils
+# install required utilities and libraries
+RUN apk add git pacman binutils nettle
 
 # create local user
 RUN adduser -D --uid 1000 user
