--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "serene-cli"
-version = "0.3.1"
+version = "0.0.0"
 edition = "2021"
 
 [build-dependencies]
@@ -10,6 +10,7 @@ clap_complete = "*"
 [dependencies]
 serene-data = { path = "../server/data" }
 anyhow = "1.0.77"
+semver = "1.0.23"
 
 # serialization
 serde = { version = "1.0.193", features = ["derive"]}
