--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "serene"
-version = "0.3.1"
+version = "0.0.0"
 edition = "2021"
 
 [dependencies]
@@ -32,6 +32,7 @@ async-tar = "0.4.2"
 hyper = "0.14.27"
 
 # web
+time = "0.3.35" # won't build otherwise with new toolchain
 actix-web = "4.8.0"
 actix-files = "0.6.2"
 actix-web-lab = "0.20.2"
