--- a/.github/workflows/publish-runner.yml
+++ b/.github/workflows/publish-runner.yml
@@ -3,7 +3,6 @@ name: Build and Publish Runner Image
 on:
   push:
     branches: ['main']
-    paths: ["runner/**", ".github/workflows/publish-runner.yml"]
   workflow_dispatch:
   schedule:
     - cron: "0 22 * * *"
@@ -23,6 +22,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          # we need this to get the tag
+          fetch-depth: 0
+          fetch-tags: true
+
+      - name: Get latest tag
+        run: echo "tag=$(git describe --tags --abbrev=0)" >> "$GITHUB_ENV"
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -36,6 +42,11 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=raw,value=edge-${{ env.tag }}
+
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
