--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          # we need this for git versioning
+          fetch-depth: 0
+          fetch-tags: true
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
