--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 serene-data = { path = "data" }
 
 # interact with the aur
-alpm = "3.0.5"
-alpm-utils = "3.0.2"
-aur-depends = { git = "https://github.com/Morganamilo/aur-depends" } # what the fuck's up with the version on crates.io?
+alpm = "4.0.1"
+alpm-utils = "4.0.1"
+aur-depends = "4.0.0"
 raur = { version = "7.0.0", default-features = false, features = ["async", "rustls-tls"] }
 srcinfo = "1.1.0"
 
@@ -45,6 +45,7 @@ serde = "1.0.193"
 serde_json = "1.0.108"
 typetag = "0.2.14"
 dyn-clone = "1.0.16"
+either = "1.13.0"
 
 # database
 sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", ]}
