--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,8 +14,8 @@ raur = { version = "7.0.0", default-features = false, features = ["async", "rust
 srcinfo = "1.1.0"
 
 # async
-tokio = { version = "1.35.0", features = ["full"]}
-tokio-util = { version = "0.7.10", features = ["compat"]}
+tokio = { version = "1.35.0", features = ["full"] }
+tokio-util = { version = "0.7.10", features = ["compat"] }
 tokio-stream = "0.1.15"
 
 futures = "0.3.29"
@@ -28,6 +28,7 @@ async-trait = "0.1.74"
 tokio-cron-scheduler = "0.9.4"
 uuid = "1.6.1"
 chrono = { version = "0.4.31", features = ["serde"] }
+cron = "0.12.1"
 
 # docker
 bollard = "0.15.0"
@@ -45,10 +46,9 @@ serde = "1.0.193"
 serde_json = "1.0.108"
 typetag = "0.2.14"
 dyn-clone = "1.0.16"
-either = "1.13.0"
 
 # database
-sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", ]}
+sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", ] }
 
 # log
 log = "0.4.20"
