--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,8 +9,8 @@ serene-data = { path = "data" }
 # interact with the aur
 alpm = "4.0.1"
 alpm-utils = "4.0.1"
-aur-depends = "4.0.0"
 raur = { version = "7.0.0", default-features = false, features = ["async", "rustls-tls"] }
+aur-depends = { version = "4.0.0", default-features = false, features = ["rustls-tls"] }
 srcinfo = "1.1.0"
 
 # async
@@ -25,8 +25,6 @@ async-std = "1.12.0"
 async-trait = "0.1.74"
 
 # scheduling
-tokio-cron-scheduler = "0.9.4"
-uuid = "1.6.1"
 chrono = { version = "0.4.31", features = ["serde"] }
 cron = "0.12.1"
 
