--- a/cli/PKGBUILD
+++ b/cli/PKGBUILD
@@ -17,7 +17,7 @@ _binary_name="serene"
 pkgver() {
 	cd serene-aur/cli
 
-	git describe --long --abbrev=7 --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+	git describe --long --abbrev=7 --tags | sed 's/^[^0-9]*//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
