--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: 22
           cache: npm
+          cache-dependency-path: docs/.website/package-lock.json
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
