--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,24 +25,25 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node
+      - name: Setup node
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: npm
           cache-dependency-path: docs/.website/package-lock.json
 
-      - name: Setup Pages
+      - name: Setup pages
         uses: actions/configure-pages@v4
 
-      - name: Enter website directory
-        run: cd docs/.website
-
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd docs/.website
+          npm ci
 
-      - name: Build with VitePress
-        run: npm run docs:build
+      - name: Build page
+        run: |
+          cd docs/.website
+          npm run docs:build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
@@ -55,8 +56,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     needs: build
     runs-on: ubuntu-latest
-    name: Deploy
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub pages
         id: deployment
         uses: actions/deploy-pages@v4
