--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,7 +3,7 @@ name: Deploy Documentation Site
 on:
   push:
     branches: ['main']
-    paths: ["docs/**", ".github/workflows/deploy.yml"]
+    paths: ["docs/**", ".github/workflows/docs.yml"]
   workflow_dispatch:
 
 permissions:
