fix: set timeout for aur rpc requests

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,7 @@ alpm-utils = "4.0.1"
 raur = { version = "7.0.0", default-features = false, features = ["async", "rustls-tls"] }
 aur-depends = { version = "4.0.0", default-features = false, features = ["rustls-tls"] }
 srcinfo = "1.1.0"
+reqwest = { version = "0.11.9", default-features = false }
 
 # async
 tokio = { version = "1.35.0", features = ["full"] }
